FolderContainingFilesForExecution/cTurtle2Parser.java
// Generated from cTurtle2.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class cTurtle2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, SHAPE=28, COLOR=29, DIGIT=30, VARIABLE=31, 
		WS=32;
	public static final int
		RULE_file = 0, RULE_moreStatements = 1, RULE_statement = 2, RULE_assignStatement = 3, 
		RULE_copyStatement = 4, RULE_descriptor = 5, RULE_colorProperty = 6, RULE_speed = 7, 
		RULE_color = 8, RULE_rectangleSize = 9, RULE_object = 10, RULE_coordinate = 11, 
		RULE_negativeX = 12, RULE_negativeY = 13, RULE_polygon = 14, RULE_number = 15, 
		RULE_commandStatement = 16, RULE_drawStatement = 17, RULE_deleteStatement = 18;
	public static final String[] ruleNames = {
		"file", "moreStatements", "statement", "assignStatement", "copyStatement", 
		"descriptor", "colorProperty", "speed", "color", "rectangleSize", "object", 
		"coordinate", "negativeX", "negativeY", "polygon", "number", "commandStatement", 
		"drawStatement", "deleteStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'.'", "'->'", "'fill-color'", "'='", "','", "'line-color'", "'line-width'", 
		"'starting-position'", "'drawing-speed'", "'radius'", "'side-length'", 
		"'instantaneous'", "'rgb('", "')'", "'x'", "'X'", "'*'", "'line'", "'to'", 
		"'through'", "'['", "']'", "'('", "'-'", "'-gon'", "'draw'", "'delete'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "SHAPE", "COLOR", "DIGIT", "VARIABLE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "cTurtle2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public cTurtle2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public MoreStatementsContext moreStatements() {
			return getRuleContext(MoreStatementsContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitFile(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			statement();
			setState(39);
			moreStatements();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoreStatementsContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public MoreStatementsContext moreStatements() {
			return getRuleContext(MoreStatementsContext.class,0);
		}
		public MoreStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moreStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterMoreStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitMoreStatements(this);
		}
	}

	public final MoreStatementsContext moreStatements() throws RecognitionException {
		MoreStatementsContext _localctx = new MoreStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moreStatements);
		try {
			setState(45);
			switch (_input.LA(1)) {
			case T__25:
			case T__26:
			case VARIABLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				statement();
				setState(42);
				moreStatements();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CommandStatementWrapperContext extends StatementContext {
		public CommandStatementContext commandStatement() {
			return getRuleContext(CommandStatementContext.class,0);
		}
		public CommandStatementWrapperContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterCommandStatementWrapper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitCommandStatementWrapper(this);
		}
	}
	public static class AssignStatementWrapperContext extends StatementContext {
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public AssignStatementWrapperContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterAssignStatementWrapper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitAssignStatementWrapper(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(53);
			switch (_input.LA(1)) {
			case VARIABLE:
				_localctx = new AssignStatementWrapperContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				assignStatement();
				setState(48);
				match(T__0);
				}
				break;
			case T__25:
			case T__26:
				_localctx = new CommandStatementWrapperContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				commandStatement();
				setState(51);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStatementContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(cTurtle2Parser.VARIABLE, 0); }
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public CopyStatementContext copyStatement() {
			return getRuleContext(CopyStatementContext.class,0);
		}
		public List<DescriptorContext> descriptor() {
			return getRuleContexts(DescriptorContext.class);
		}
		public DescriptorContext descriptor(int i) {
			return getRuleContext(DescriptorContext.class,i);
		}
		public AssignStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterAssignStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitAssignStatement(this);
		}
	}

	public final AssignStatementContext assignStatement() throws RecognitionException {
		AssignStatementContext _localctx = new AssignStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignStatement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(VARIABLE);
			setState(56);
			match(T__1);
			setState(65);
			switch (_input.LA(1)) {
			case T__2:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__17:
			case SHAPE:
			case DIGIT:
				{
				setState(60);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(57);
						descriptor();
						}
						} 
					}
					setState(62);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(63);
				object();
				}
				break;
			case VARIABLE:
				{
				setState(64);
				copyStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CopyStatementContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(cTurtle2Parser.VARIABLE, 0); }
		public CopyStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_copyStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterCopyStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitCopyStatement(this);
		}
	}

	public final CopyStatementContext copyStatement() throws RecognitionException {
		CopyStatementContext _localctx = new CopyStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_copyStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(VARIABLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptorContext extends ParserRuleContext {
		public DescriptorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descriptor; }
	 
		public DescriptorContext() { }
		public void copyFrom(DescriptorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CircleRadiusContext extends DescriptorContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public CircleRadiusContext(DescriptorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterCircleRadius(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitCircleRadius(this);
		}
	}
	public static class LineWidthContext extends DescriptorContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(cTurtle2Parser.VARIABLE, 0); }
		public LineWidthContext(DescriptorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterLineWidth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitLineWidth(this);
		}
	}
	public static class PolygonSideLengthContext extends DescriptorContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public PolygonSideLengthContext(DescriptorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterPolygonSideLength(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitPolygonSideLength(this);
		}
	}
	public static class DrawingSpeedContext extends DescriptorContext {
		public SpeedContext speed() {
			return getRuleContext(SpeedContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(cTurtle2Parser.VARIABLE, 0); }
		public DrawingSpeedContext(DescriptorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterDrawingSpeed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitDrawingSpeed(this);
		}
	}
	public static class FillColorContext extends DescriptorContext {
		public ColorContext color() {
			return getRuleContext(ColorContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(cTurtle2Parser.VARIABLE, 0); }
		public ColorPropertyContext colorProperty() {
			return getRuleContext(ColorPropertyContext.class,0);
		}
		public FillColorContext(DescriptorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterFillColor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitFillColor(this);
		}
	}
	public static class RectSizeContext extends DescriptorContext {
		public RectangleSizeContext rectangleSize() {
			return getRuleContext(RectangleSizeContext.class,0);
		}
		public RectSizeContext(DescriptorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterRectSize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitRectSize(this);
		}
	}
	public static class StartingPositionContext extends DescriptorContext {
		public CoordinateContext coordinate() {
			return getRuleContext(CoordinateContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(cTurtle2Parser.VARIABLE, 0); }
		public StartingPositionContext(DescriptorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterStartingPosition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitStartingPosition(this);
		}
	}
	public static class LineColorContext extends DescriptorContext {
		public ColorContext color() {
			return getRuleContext(ColorContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(cTurtle2Parser.VARIABLE, 0); }
		public ColorPropertyContext colorProperty() {
			return getRuleContext(ColorPropertyContext.class,0);
		}
		public LineColorContext(DescriptorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterLineColor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitLineColor(this);
		}
	}

	public final DescriptorContext descriptor() throws RecognitionException {
		DescriptorContext _localctx = new DescriptorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_descriptor);
		try {
			setState(129);
			switch (_input.LA(1)) {
			case T__2:
				_localctx = new FillColorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				match(T__2);
				setState(70);
				match(T__3);
				setState(75);
				switch (_input.LA(1)) {
				case T__12:
				case COLOR:
					{
					setState(71);
					color();
					}
					break;
				case VARIABLE:
					{
					setState(72);
					match(VARIABLE);
					setState(73);
					match(T__0);
					setState(74);
					colorProperty();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(77);
				match(T__4);
				}
				break;
			case T__5:
				_localctx = new LineColorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				match(T__5);
				setState(80);
				match(T__3);
				setState(85);
				switch (_input.LA(1)) {
				case T__12:
				case COLOR:
					{
					setState(81);
					color();
					}
					break;
				case VARIABLE:
					{
					setState(82);
					match(VARIABLE);
					setState(83);
					match(T__0);
					setState(84);
					colorProperty();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(87);
				match(T__4);
				}
				break;
			case T__6:
				_localctx = new LineWidthContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				match(T__6);
				setState(90);
				match(T__3);
				setState(95);
				switch (_input.LA(1)) {
				case DIGIT:
					{
					setState(91);
					number();
					}
					break;
				case VARIABLE:
					{
					setState(92);
					match(VARIABLE);
					setState(93);
					match(T__0);
					setState(94);
					match(T__6);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(97);
				match(T__4);
				}
				break;
			case T__7:
				_localctx = new StartingPositionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				match(T__7);
				setState(99);
				match(T__3);
				setState(104);
				switch (_input.LA(1)) {
				case T__22:
					{
					setState(100);
					coordinate();
					}
					break;
				case VARIABLE:
					{
					setState(101);
					match(VARIABLE);
					setState(102);
					match(T__0);
					setState(103);
					match(T__7);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(106);
				match(T__4);
				}
				break;
			case T__8:
				_localctx = new DrawingSpeedContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(107);
				match(T__8);
				setState(108);
				match(T__3);
				setState(113);
				switch (_input.LA(1)) {
				case T__11:
				case DIGIT:
					{
					setState(109);
					speed();
					}
					break;
				case VARIABLE:
					{
					setState(110);
					match(VARIABLE);
					setState(111);
					match(T__0);
					setState(112);
					match(T__8);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(115);
				match(T__4);
				}
				break;
			case DIGIT:
				_localctx = new RectSizeContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				rectangleSize();
				setState(117);
				match(T__4);
				}
				break;
			case T__9:
				_localctx = new CircleRadiusContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(119);
				match(T__9);
				setState(120);
				match(T__3);
				setState(121);
				number();
				setState(122);
				match(T__4);
				}
				break;
			case T__10:
				_localctx = new PolygonSideLengthContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(124);
				match(T__10);
				setState(125);
				match(T__3);
				setState(126);
				number();
				setState(127);
				match(T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColorPropertyContext extends ParserRuleContext {
		public ColorPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_colorProperty; }
	 
		public ColorPropertyContext() { }
		public void copyFrom(ColorPropertyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ColorPropertyLineColorContext extends ColorPropertyContext {
		public ColorPropertyLineColorContext(ColorPropertyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterColorPropertyLineColor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitColorPropertyLineColor(this);
		}
	}
	public static class ColorPropertyFillColorContext extends ColorPropertyContext {
		public ColorPropertyFillColorContext(ColorPropertyContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterColorPropertyFillColor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitColorPropertyFillColor(this);
		}
	}

	public final ColorPropertyContext colorProperty() throws RecognitionException {
		ColorPropertyContext _localctx = new ColorPropertyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_colorProperty);
		try {
			setState(133);
			switch (_input.LA(1)) {
			case T__2:
				_localctx = new ColorPropertyFillColorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				match(T__2);
				}
				break;
			case T__5:
				_localctx = new ColorPropertyLineColorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpeedContext extends ParserRuleContext {
		public SpeedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_speed; }
	 
		public SpeedContext() { }
		public void copyFrom(SpeedContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SpeedInstantaneousContext extends SpeedContext {
		public SpeedInstantaneousContext(SpeedContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterSpeedInstantaneous(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitSpeedInstantaneous(this);
		}
	}
	public static class SpeedDigitContext extends SpeedContext {
		public TerminalNode DIGIT() { return getToken(cTurtle2Parser.DIGIT, 0); }
		public SpeedDigitContext(SpeedContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterSpeedDigit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitSpeedDigit(this);
		}
	}

	public final SpeedContext speed() throws RecognitionException {
		SpeedContext _localctx = new SpeedContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_speed);
		try {
			setState(137);
			switch (_input.LA(1)) {
			case T__11:
				_localctx = new SpeedInstantaneousContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(T__11);
				}
				break;
			case DIGIT:
				_localctx = new SpeedDigitContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(DIGIT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColorContext extends ParserRuleContext {
		public ColorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_color; }
	 
		public ColorContext() { }
		public void copyFrom(ColorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ColorRGBContext extends ColorContext {
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public ColorRGBContext(ColorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterColorRGB(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitColorRGB(this);
		}
	}
	public static class ColorStringContext extends ColorContext {
		public TerminalNode COLOR() { return getToken(cTurtle2Parser.COLOR, 0); }
		public ColorStringContext(ColorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterColorString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitColorString(this);
		}
	}

	public final ColorContext color() throws RecognitionException {
		ColorContext _localctx = new ColorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_color);
		try {
			setState(148);
			switch (_input.LA(1)) {
			case T__12:
				_localctx = new ColorRGBContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(T__12);
				setState(140);
				number();
				setState(141);
				match(T__4);
				setState(142);
				number();
				setState(143);
				match(T__4);
				setState(144);
				number();
				setState(145);
				match(T__13);
				}
				break;
			case COLOR:
				_localctx = new ColorStringContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				match(COLOR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RectangleSizeContext extends ParserRuleContext {
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public RectangleSizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rectangleSize; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).enterRectangleSize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cTurtle2Listener ) ((cTurtle2Listener)listener).exitRectangleSize(this);
		}
	}
